# julie

./: .gitignore  .julieignore  AGENTS.md  ARCHITECTURE_DEBT.md  BUG_REPORT_STALE_INDEX.md  CACHE_UNIFICATION_ANALYSIS.md  CACHE_UNIFICATION_DIFF.md  CACHE_UNIFICATION_IMPLEMENTATION.md  CACHE_UNIFICATION_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY_2025-10-25.md  Cargo.toml  DOCUMENTATION_AUDIT.md  EXTRACTOR_AUDIT_PLAN.md  EXTRACTOR_BASELINE_REPORT.md  EXTRACTOR_IMPROVEMENTS_REPORT.md  IMPLEMENTATION_COMPLETE.md  JULIE_AGENT_INSTRUCTIONS.md  JULIE_AGENT_INSTRUCTIONS.md.old  MAIN_RS_CHANGES.md  ONNX_ERROR_HANDLING_FIX.md  PANIC_FIXES_SUMMARY.md  PHASE2_REFACTORING_PLAN.md  QUERY_EXPANSION_FINAL_RESULTS.md  RAZORBACK.md  README.md  REALITY_CHECK.md  REFACTORING_SUMMARY.md  REFACTORING_SUMMARY_UNSAFE_TRANSMUTE.md  SAFE_TRANSMUTE_IMPLEMENTATION.md  SEMANTIC_SEARCH_ERROR_HANDLING.md  SQLITE_CORRUPTION_FIX_SUMMARY.md  STATUS.md  TESTING.md  TESTING_IMPROVEMENTS_PHASE1.md  TEST_REORGANIZATION_PLAN.md  TODO.md  TOOL_CONSISTENCY_AUDIT.md  TOOL_CONSISTENCY_FIXES_SUMMARY.md  TOOL_REVIEWS.md  (+20 more)
crates/julie-context/: Cargo.toml
crates/julie-context/src/: lib.rs  tool_context.rs  workspace_target.rs
crates/julie-context/tests/: no_upward_deps.rs
crates/julie-core/: Cargo.toml
crates/julie-core/src/: connection_pool.rs  cross_language_intelligence.rs  embeddings_contract.rs  external_extract_paths.rs  file_policy.rs  file_utils.rs  glob.rs  health_types.rs  indexing_state.rs  language.rs  lib.rs  mcp_compat.rs  paths.rs  shared.rs  string_similarity.rs  walk.rs  workspace_errors.rs  workspace_scan.rs
crates/julie-core/src/database/: analytics.rs  complexity_metrics.rs  files.rs  helpers.rs  identifiers.rs  impact_graph.rs  index_engine.rs  migrations.rs  mod.rs  projections.rs  repairs.rs  revision_changes.rs  revisions.rs  schema.rs  schema_enrichments.rs  source_regions.rs  structural_facts.rs  tool_calls.rs  type_queries.rs  web_edges.rs  workspace.rs
crates/julie-core/src/test_support/: cleanup.rs  mod.rs  tempdir.rs
crates/julie-core/src/tests/: bulk_store_types_tdd.rs  bulk_store_types_tests.rs  database.rs  database_lightweight_query.rs  database_row_mapping.rs  helpers.rs  memory_vectors.rs  mod.rs  paths.rs  vector_storage.rs
crates/julie-core/src/workspace/: leader_lock.rs  mod.rs  mutation_gate.rs  registry.rs  root_safety.rs
crates/julie-core/tests/: no_upward_deps.rs
crates/julie-extractors/: Cargo.toml  README.md
crates/julie-extractors/examples/: extract_file.rs
crates/julie-extractors/src/: capability_snapshot.rs  factory.rs  language.rs  language_spec.rs  lib.rs  manager.rs  pipeline.rs  registry.rs  routing_identifiers.rs  routing_relationships.rs  routing_symbols.rs  test_calls.rs  test_detection.rs
crates/julie-extractors/src/base/: annotations.rs  body.rs  creation_methods.rs  embedded_span.rs  extractor.rs  kinds.rs  mod.rs  relationship_resolution.rs  results_normalization.rs  span.rs  string_literals.rs  tree_methods.rs  type_arguments.rs  type_models.rs  types.rs
crates/julie-extractors/src/bash/: commands.rs  functions.rs  helpers.rs  mod.rs  relationships.rs  signatures.rs  test_calls.rs  types.rs  variables.rs
crates/julie-extractors/src/c/: declarations.rs  helpers.rs  identifiers.rs  mod.rs  relationships.rs  signatures.rs  structs.rs  test_calls.rs  typedefs.rs  types.rs
crates/julie-extractors/src/cpp/: concepts.rs  declarations.rs  fields.rs  function_declarators.rs  function_signature_parts.rs  functions.rs  helpers.rs  mod.rs  (+8 more)
crates/julie-extractors/tests/: downstream_smoke.rs
crates/julie-index/: Cargo.toml
crates/julie-index/languages/: bash.toml  css.toml  gdscript.toml  go.toml  html.toml  kotlin.toml  markdown.toml  powershell.toml  qml.toml  r.toml  swift.toml  typescript.toml  vue.toml
crates/julie-index/src/: lib.rs
crates/julie-index/tests/: no_upward_deps.rs
crates/julie-pipeline/: Cargo.toml
crates/julie-pipeline/src/: finalize.rs  lib.rs  resolver.rs
crates/julie-pipeline/tests/: no_upward_deps.rs
crates/julie-runtime/: Cargo.toml
crates/julie-runtime/src/: lib.rs
crates/julie-runtime/tests/: no_upward_deps.rs
crates/julie-test-support/: Cargo.toml
crates/julie-test-support/src/: cleanup.rs  fake_tool_context.rs  lib.rs  workspace_markers.rs
crates/julie-tools/: Cargo.toml
crates/julie-tools/src/: lib.rs  shared.rs
crates/julie-tools/tests/: no_upward_deps.rs
python/embeddings_sidecar/: pyproject.toml
python/embeddings_sidecar/sidecar/: __init__.py  main.py  protocol.py  runtime.py
python/embeddings_sidecar/tests/: conftest.py  test_main.py  test_protocol.py  test_runtime.py
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/binaries/: .gitignore
tauri-app/src-tauri/capabilities/: main-capability.json
tauri-app/src-tauri/src/: daemon_client.rs  diagnostics.rs  health_poller.rs  main.rs  tray.rs  updates.rs
xtask/: Cargo.toml  test_tiers.toml
xtask/src/: changed.rs  cli.rs  dev_workflow.rs  inventory.rs  lib.rs  main.rs  manifest.rs  process.rs  runner.rs  search_ablation.rs  search_matrix.rs  search_matrix_mine.rs  search_matrix_report.rs  sync_plugin.rs  tree_sitter_certification.rs  tree_sitter_certification_data.rs  tree_sitter_certification_report.rs  tree_sitter_real_world.rs  tree_sitter_real_world_report.rs
xtask/src/changed/: diff.rs  mapping.rs  policy.rs  rendering.rs  tests.rs
xtask/src/runner/: execution.rs  prebuild.rs  rendering.rs  tests.rs
xtask/src/tree_sitter_real_world/: representative_specs.rs  representative_specs_tests.rs
xtask/tests/: changed_boundary_tests.rs  changed_tests.rs  dispatch_tests.rs  docs_contract_tests.rs  extractor_dependency_contract_tests.rs  inventory_tests.rs  lean_deps_allowlist_tests.rs  manifest_contract_tests.rs  manifest_tests.rs  runner_boundary_tests.rs  runner_coverage_tests.rs  runner_tests.rs  search_matrix_ablation_tests.rs  search_matrix_contract_tests.rs  toolchain_contract_tests.rs  tree_sitter_certification_tests.rs
xtask/tests/support/: manifest_contract_expected.rs  toml_fixture.rs
(+5187 files in other folders)
