[workspace]
members = [".", "crates/julie-extractors"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Alan"]
license = "MIT"

[package]
name = "julie"
version = "2.3.0"
edition.workspace = true
authors.workspace = true
description = "Julie - Cross-Platform Code Intelligence Server"
license.workspace = true

[lib]
name = "julie"
path = "src/lib.rs"

[[bin]]
name = "julie-server"
path = "src/main.rs"


[dependencies]
# Julie Extractors (workspace member crate)
julie-extractors = { path = "crates/julie-extractors" }

# MCP Server SDK - Official Anthropic SDK
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }
schemars = "1.0"  # For JsonSchema derives in tool parameters

# Async recursion support
async-recursion = "1.1"

# Tree-sitter core (for tools/refactoring and tools/workspace/indexing)
# Language-specific parsers moved to julie-extractors crate
tree-sitter = "0.25"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Full-text search engine with custom code tokenizer
tantivy = "0.22"

# File watching
notify = "8.2"

# Utilities
async-trait = "0.1"
futures = "0.3"
diff-match-patch-rs = "0.5.1"  # Google's proven diff/patch algorithm for professional editing
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
md5 = "0.7"
regex = "1.11"
blake3 = "1.8"
hex = "0.4"
shellexpand = "3.1"
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Pattern matching for file discovery
glob = "0.3"
globset = "0.4.16"  # Advanced glob matching with exclusion patterns support
chrono = { version = "0.4.42", features = ["serde"] }

walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
tokio-test = "0.4"
cargo-tarpaulin = "0.31"
serial_test = "3.2"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

