[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
julie = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.18"
