[package]
name = "julie-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bottom leaf crate of the Julie workspace — shared types and infrastructure"

[dependencies]
# Julie Extractors — identical pin to the root crate so julie_extractors:: types unify
julie-extractors = { git = "https://github.com/anortham/julie-extractors", tag = "v2.0.3" }

# Database
rusqlite = { version = "0.39.0", features = ["bundled"] }

# Error handling
anyhow = "1.0"

# File locking
fs2 = "0.4"

# Semantic embeddings
sqlite-vec = "0.1"

# Logging
tracing = "0.1"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
blake3 = "1.8"
md5 = "0.7"

# Zero-copy byte conversions (vector storage)
zerocopy = { version = "0.7", features = ["derive"] }

# Date/time
chrono = { version = "0.4.42", features = ["serde"] }
