[package]
name = "julie-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bottom leaf crate of the Julie workspace — shared types and infrastructure"

[features]
# Enable handler-free test helpers (db builders, open_test_connection, tempdir, cleanup).
# Automatically included when cfg(test); downstream consumers enable this feature explicitly.
test-support = ["dep:tempfile"]

[dependencies]
# Julie Extractors — identical pin to the root crate so julie_extractors:: types unify
julie-extractors = { git = "https://github.com/anortham/julie-extractors", tag = "v2.4.0" }

# Glob matching — for glob pattern filtering (julie_core::glob)
globset = "0.4.16"

# Temp directories — for test_support::tempdir (optional; enabled by test-support feature)
tempfile = { version = "3.13", optional = true }

# Database
rusqlite = { version = "0.39.0", features = ["bundled"] }

# Error handling
anyhow = "1.0"

# File locking
fs2 = "0.4"

# Semantic embeddings
sqlite-vec = "0.1"

# Logging
tracing = "0.1"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
blake3 = "1.8"
md5 = "0.7"
sha2 = "0.10"

# Zero-copy byte conversions (vector storage)
zerocopy = { version = "0.7", features = ["derive"] }

# Date/time
chrono = { version = "0.4.42", features = ["serde"] }

# Platform directories (workspace root safety)
dirs = "6"

# File walker (walk.rs)
ignore = "0.4"

# Tilde expansion (external extract paths)
shellexpand = "3.1"

# MCP SDK — for mcp_compat (pure result-wrapper types, no upward deps)
rmcp = { version = "1.6", features = ["server"] }

# JSON Schema derives (mcp_compat)
schemars = "1.0"

[dev-dependencies]
# tempfile as dev-dep so cfg(test) builds (which don't activate the test-support feature)
# still compile test_support::tempdir and any test that calls tempfile::tempdir() directly.
tempfile = "3.13"
tree-sitter = "0.26.8"
