[package]
name = "julie-test-support"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Thin re-export of julie_core::test_support — handler-free helpers for the Julie workspace (see ADR-0006)"

[dependencies]
# Re-export the helpers that live in julie-core (ADR-0006: single source, no dep cycle).
julie-core = { path = "../julie-core", features = ["test-support"] }
