[package]
name = "julie-tray"
version = "4.2.0"
edition.workspace = true
description = "Julie system tray app — daemon management and status"
authors.workspace = true
license.workspace = true

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
anyhow = "1"
fs2 = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
